[gd_scene load_steps=20 format=2]

[ext_resource path="res://Images/Buttons/Button5Hover.png" type="Texture" id=1]
[ext_resource path="res://Comic_Neue/ComicNeue-BoldItalic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Images/Backgrounds/BG3.jpg" type="Texture" id=3]
[ext_resource path="res://Images/Buttons/Button4Hover.png" type="Texture" id=4]
[ext_resource path="res://Scripts/changeCharacters.gd" type="Script" id=5]
[ext_resource path="res://Scenes/backButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://Images/Buttons/ButtonDisabled.png" type="Texture" id=7]
[ext_resource path="res://Images/Buttons/Button5.png" type="Texture" id=8]
[ext_resource path="res://Audio/buttonPress2.wav" type="AudioStream" id=9]
[ext_resource path="res://Comic_Neue/ComicNeue-Bold.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Images/Buttons/Button4.png" type="Texture" id=11]
[ext_resource path="res://Scenes/click.tscn" type="PackedScene" id=12]








[sub_resource type="DynamicFont" id=1]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=6]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=7]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[node name="changeCharacters" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 2731.0
margin_bottom = 1714.0
rect_scale = Vector2( 0.375, 0.375 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -342.0
margin_top = -169.0
margin_right = 346.0
margin_bottom = 666.0
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]

[node name="backButton" parent="." instance=ExtResource( 6 )]

[node name="Label" type="Label" parent="."]
margin_left = 53.4345
margin_top = 19.131
margin_right = 62.4345
margin_bottom = 38.131
custom_fonts/font = SubResource( 1 )
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="BGM" type="AudioStreamPlayer" parent="."]

[node name="addYourOwn" type="Label" parent="."]
margin_left = 595.005
margin_top = 229.228
margin_right = 870.005
margin_bottom = 257.228
custom_fonts/font = SubResource( 2 )
text = "Add Your Own Characters!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="characters" type="Label" parent="."]
margin_left = 686.066
margin_top = 265.866
margin_right = 859.066
margin_bottom = 284.866
custom_fonts/font = SubResource( 3 )
text = "0/30"
align = 2

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 597.0
margin_top = 284.749
margin_right = 860.0
margin_bottom = 313.749
custom_fonts/font = SubResource( 4 )
max_length = 30
context_menu_enabled = false
placeholder_text = "Enter your character here..."
placeholder_alpha = 0.3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddCharacter" type="TextureButton" parent="."]
margin_left = 608.839
margin_top = 330.977
margin_right = 1208.84
margin_bottom = 630.977
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="add" type="Label" parent="."]
margin_left = 657.0
margin_top = 351.749
margin_right = 682.0
margin_bottom = 370.749
custom_fonts/font = SubResource( 5 )
text = "Add"

[node name="clearCharacter" type="TextureButton" parent="."]
margin_left = 722.184
margin_top = 331.624
margin_right = 1322.18
margin_bottom = 631.624
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 1 )
texture_disabled = ExtResource( 7 )

[node name="clear" type="Label" parent="."]
margin_left = 764.215
margin_top = 351.749
margin_right = 800.215
margin_bottom = 370.749
custom_fonts/font = SubResource( 5 )
text = "Clear"

[node name="ERROR" type="Label" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_left = 599.892
margin_top = 317.008
margin_right = 648.892
margin_bottom = 336.008
custom_fonts/font = SubResource( 6 )
text = "ERROR:"

[node name="empty" type="Label" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_left = 656.525
margin_top = 317.008
margin_right = 777.525
margin_bottom = 336.008
custom_fonts/font = SubResource( 6 )
text = "Cannot be empty."

[node name="duplicate" type="Label" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_left = 656.525
margin_top = 317.008
margin_right = 781.525
margin_bottom = 336.008
custom_fonts/font = SubResource( 6 )
text = "Already in the list."

[node name="errorTimer" type="Timer" parent="."]
one_shot = true

[node name="Success" type="Label" parent="."]
visible = false
modulate = Color( 0.360784, 0.972549, 0, 1 )
margin_left = 602.735
margin_top = 318.066
margin_right = 735.735
margin_bottom = 337.066
custom_fonts/font = SubResource( 7 )
text = "Successfully added!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="successTimer" type="Timer" parent="."]
one_shot = true

[node name="scrollTimer" type="Timer" parent="."]
one_shot = true

[node name="click" parent="." instance=ExtResource( 12 )]
[connection signal="pressed" from="backButton" to="." method="_on_backButton_pressed"]
[connection signal="finished" from="BGM" to="." method="_on_BGM_finished"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="AddCharacter" to="." method="_on_AddCharacter_pressed"]
[connection signal="pressed" from="clearCharacter" to="." method="_on_clearCharacter_pressed"]
[connection signal="timeout" from="errorTimer" to="." method="_on_errorTimer_timeout"]
[connection signal="timeout" from="successTimer" to="." method="_on_successTimer_timeout"]
[connection signal="timeout" from="scrollTimer" to="." method="_on_scrollTimer_timeout"]
